--- a/movieVerse-frontend/src/components/homePage/popularProducts.module.css
+++ b/movieVerse-frontend/src/components/homePage/popularProducts.module.css
@@ -12,10 +12,6 @@
   width: 95%;
 }
 
-.popular-section-bottom-hr {
-  margin-bottom: 4rem;
-}
-
 .popular-section-text {
   margin-bottom: 1.5rem;
   font-size: 2rem;
@@ -25,22 +21,25 @@
 .popular-products-grid {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  width: 95%;
+  width: 100%;
+  max-width: 100%;
   row-gap: 1.8rem;
   justify-items: center;
+  gap: 1rem;
+  box-sizing: border-box;
 }
 
-.popular-producs-grid-item {
-  width: 90%;
+.popular-products-grid-item {
+  width: 100%;
 }
 
-.popular-producs-grid-item img {
+.popular-products-grid-item img {
   width: 100%;
   border-radius: 10px;
   cursor: pointer;
 }
 
-.popular-producs-grid-item img:hover {
+.popular-products-grid-item img:hover {
   opacity: 0.7;
 }
 
