--- a/movieVerse-frontend/src/components/productsPage/productsList.module.css
+++ b/movieVerse-frontend/src/components/productsPage/productsList.module.css
@@ -115,6 +115,33 @@
   opacity: 0.7;
 }
 
+.pagination-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  margin-top: 2rem;
+}
+
+.nav-button {
+  padding: 0.2rem 0.5rem;
+  color: white;
+  background-color: #07121e;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.nav-button:hover {
+  background-color: #03101e;
+}
+
+.page-info {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
 @media (max-width: 1700px) {
   .filter-words {
     column-gap: 8rem;
