--- a/movieVerse-frontend/src/components/homePage/popularProducts.module.css
+++ b/movieVerse-frontend/src/components/homePage/popularProducts.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(14, 14, 14);
+  background-color: #121212;
   color: white;
 }
 
