--- a/movieVerse-frontend/src/components/shared/footer.module.css
+++ b/movieVerse-frontend/src/components/shared/footer.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(14, 14, 14);
+  background-color: #121212;
   color: white;
 }
 
